<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:orderInCategory="0"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/copy"
        android:orderInCategory="1"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit"
        android:orderInCategory="2"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="3"
        android:title="@string/action_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/information"
        android:orderInCategory="4"
        android:title="@string/action_information"
        app:showAsAction="never" />
</menu>
